--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
   "name": "assets-management",
   "version": "1.0.0",
-  "description": "\"Asset Management Dashboard\"",
+  "description": "Asset Management Dashboard",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon -r dotenv/config src/index.js"
   },
   "author": "Himanshu Parodiya",
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^3.1.1",
     "prettier": "^3.2.5"
+  },
+  "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mongoose": "^8.4.0"
   }
 }
